# adk-agent-agripulse

./: .env.example  .gitignore  CROP_PRACTICES_IMPLEMENTATION.md  CROP_PRACTICE_INTEGRATION.md  DASHBOARD_AGENT_IMPLEMENTATION.md  DOCKER_DEPLOYMENT_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICKSTART_DASHBOARD.md  README.md  SIDEBAR_ENHANCEMENT.md  STREAMLIT_COMPLETE.md  SUCCESS.md  YIELD_QUERY_FIX.md  check_table_structure.py  main.py  pyproject.toml  requirements.txt  test_crop_practice_integration.py  test_streamlit_session.py
adk_app/: __init__.py
adk_app/agents/: __init__.py
adk_app/config/: models.yaml  runtime.yaml
adk_app/core/: __init__.py  (+5 more)
deployment/: .dockerignore  .env.docker  .gitignore  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Dockerfile  INDEX.md  QUICKSTART.md  README.md  build.bat  build.sh  deploy.bat  deploy.sh  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  healthcheck.py  streamlit_config.toml
docs/: DASHBOARD_AGENT_COMPLETE.md  DISCOVERY_TOOLS.md  DOCUMENTATION_ORGANIZED.md  FEATURE_COMPLETE.md  FIXED_ISSUES.md  FORMAT_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_SUMMARY.md  PEM_CONFIG_GUIDE.md  QUERY_FIX.md  README.md  RESPONSE_FORMAT.md  SNOWFLAKE_COMPLETE.md  SNOWFLAKE_INTEGRATION.md  STREAMLIT_APP.md
scripts/: discover_all_tables.py  discover_schema.py  run_dev_ui.sh  test_correct_query.py  test_discovery_tools.py  test_snowflake.py
tests/: __init__.py  test_dashboard_agent.py  test_snowflake_integration.py  test_weather_agent.py  test_yield_agent.py
(+34 files in other folders)
